# oh-my-coder

./: .consolidate-state.json  .gitignore  .lychee.toml  .task-summary-2026-04-27-1010.md  CONTRIBUTING.md  MEMORY.md  P0-fix-20260423.md  P1-3-3-cli-filter.md  P1-3-3a_20260424_1153.md  P1-3-3a_complete.md  README.md  demo_video_generator.py  memory-maintenance_2026-04-24-15-50.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml  task-summary-demo-gif-redo-2026-04-30.md  task-summary-p1-2-config-2026-04-30.md  task-summary-p1-2-purge-2026-04-30.md  task-summary-p1-3-2026-04-30.md  task-summary-p2-1-2026-04-30.md  task-summary-p2-2-2026-04-30.md  task-summary-p3-2026-04-30.md  task-summary_2026-04-28_11-20.md  task-summary_2026-04-28_11-35.md  task-summary_2026-04-28_11-38.md  task-summary_agent-persistence-20260428.md  verify_gateway.py  修复建议
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/deploy/: railway.toml  vercel.json
.github/workflows/: doc-sync.yml  install-test.yml  lint.yml  main.yml  test.yml  update.yml
backend/: main.py
community/templates/: README.md  bug-fix-workflow.md
deploy/: docker-compose.yml
desktop/: package-lock.json  package.json  start.js
desktop/electron/: api-bridge.js  main.js  model_status.json  preload.js  voice.js
desktop/src/: App.css  App.tsx  whisper-loader.js
docs/: CODE_REVIEW.md  FAQ.md  index.md  research-desktop-ui-competitors.md
docs/agents/: agent-list.md
docs/examples/: .env.example  advanced_demo.py  basic_usage.py  cli_demo.py  demo.py  example_cicd.py  example_cli.py  example_config.py  example_django.py  web_demo.py
docs/guide/: comparison.md  free-models.md  install.md  memory-system.md  model-config.md  windows-install.md
docs/screenshots/: gen_demo_gif.py  generate_terminal_demo.py
docs/verification/: p1-2-verification-result.md
docs/zh/: API.md  demo-script-v0.2.0.md  index.md  pytest-xdist-validation.md  release_notes_template.md  research-desktop-ui-competitors-summary.md  research-desktop-ui-competitors.md  (+2 more)
examples/templates/community/simple-agent/: README.md  pyproject.toml  weather_agent.py
examples/templates/community/simple-agent/tests/: test_weather.py
health/: health_explore.json  notifications.jsonl
memory/: 2026-04-08.md  2026-04-10.md  2026-04-11.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-17.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md
rules/: doc-sync-rule.md
scripts/: check_doc_sync.py  create_hello.py  gen_demo.py  gen_demo_gif.py  install.ps1  install.sh  pre-commit.sh  pre_publish_security_check.sh  quickstart.sh  security-scan.sh
skills/: .skills_store_lock.json
src/: cli.py  cli_agent.py  cli_checkpoint.py  cli_clean.py  cli_context.py  cli_security.py  cli_server.py  cli_skill.py  cli_task.py  cli_template.py  cli_trace.py  cli_tui.py  main.py  model_discovery.py
tests/: conftest.py  test_agent_persistence.py  test_agents_batch1.py  test_api_key_mask.py  test_auto_compact.py  test_chain_of_thought.py  test_checkpoint.py  test_cli.py  test_cli_config.py  test_cli_plan.py  test_code_cleaner.py  test_config.py  test_context_compressor.py  test_cost_optimizer.py  test_create_hello.py  test_dangerous_command_blocker.py  test_error_handling.py  test_indexer.py  test_local_model_discovery.py  test_model_discovery.py  test_monorepo.py  test_multiagent.py  test_multiagent_coordinator.py  test_notify.py  test_ollama_health.py  test_performance.py  test_qa_tester.py  test_quickstart.py  test_rag.py  test_rag_indexer.py  test_rag_search.py  test_router.py  test_safe_executor.py  test_sandbox.py  test_skill_extractor.py  test_smart_test.py  test_sourcegraph.py  test_stats_counter.py  test_summary.py  test_team_statistics.py  (+1 more)
tools/: demo_video_generator.py  generate_demo_v020.py  todo_demo.py  verify_gateway.py
website/: blog.html  faq.html  index.html
(+310 files in other folders)
