[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-coder"
version = "0.2.1"
description = "Multi-agent AI programming assistant with Chinese LLM support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "VOBC", email = "vobc@example.com"}]
keywords = ["ai", "agent", "multi-agent", "coding", "llm", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "jinja2>=3.0.0",
    "redis>=4.0.0",
    "websockets>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black==24.10.0",
    "ruff==0.15.9",
    "mypy>=1.8.0",
]

[project.scripts]
omc = "src.commands.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # 行太长
    "E402",  # import 位置（examples 目录）
    "E722",  # 裸 except
    "E701",  # 一行多语句
    "W293",  # 空白行空格
    "B008",  # 函数默认参数里的函数调用（FastAPI/typer 常用）
    "B904",  # raise ... from err
    "B905",  # zip() strict
    "N802",  # 函数名大写
    "N805",  # 参数名大写
    "N806",  # 变量名大写
    "N815",  # 类变量大写
    "F841",  # 未使用变量
    "I",     # import 排序（isort）
    "UP",    # pyupgrade（`X | None` vs Optional）
    "W292",  # 文件末尾无换行
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --dist loadscope -n auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
